added test question

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /Dietitian2dArray/nbproject/private/
 /ShapeProject_Interface_Inheritance_Overload/nbproject/private/
+/PastPapers/nbproject/private/
