--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /Dietitian2dArray/nbproject/private/
 /ShapeProject_Interface_Inheritance_Overload/nbproject/private/
 /PastPapers/nbproject/private/
+/PastPapers/build/
