--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /ShapeProject_Interface_Inheritance_Overload/nbproject/private/
 /PastPapers/nbproject/private/
 /PastPapers/build/
+/business_company/nbproject/private/
