--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@
 /PastPapers/nbproject/private/
 /PastPapers/build/
 /business_company/nbproject/private/
+/EventManagement/nbproject/private/
+/MocTest/nbproject/private/
+/MocTest/build/
+/ShapeProject_Interface_Inheritance_Overload/build/
+/2021Question1/nbproject/private/
+/2021Question1/build/
