--- a/2021Question1/nbproject/project.properties
+++ b/2021Question1/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/ShapeProject_Interface_Inheritance_Overload.jar
+dist.jar=${dist.dir}/2021Question1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/ShapeProject_Interface_Inheritance_Overload
+dist.jlink.output=${dist.jlink.dir}/2021Question1
 excludes=
 includes=**
 jar.compress=false
@@ -48,9 +48,7 @@ javac.source=17
 javac.target=17
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit_4.classpath}:\
-    ${libs.hamcrest.classpath}
+    ${build.classes.dir}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
@@ -72,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=ShapeProject_Interface_Inheritance_Overload
-main.class=shapeproject_interface_inheritance_overload.ShapeProject_Interface_Inheritance_Overload
+jlink.launcher.name=2021Question1
+main.class=pkg2021question1.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
