--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 /ShapeProject_Interface_Inheritance_Overload/build/
 /2021Question1/nbproject/private/
 /2021Question1/build/
+/Question2TestPractice/nbproject/private/
+/Question2TestPractice/build/
